--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,8 @@
     "axios-hooks": "^2.7.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-responsive-image": "^5.0.0",
+    "react-responsive-picture": "^3.2.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.3",
